# lr2ir-dataset

./: .dockerignore  .gitignore  Cargo.toml  Justfile  README.md  rename_searchcgi.sh
.github/workflows/: docker-archive-frontend.yml
.just/: gen.just
archive_frontend/: Cargo.toml  Dockerfile  README.md
archive_frontend/src/: app.rs  cli.rs  fts.rs  json.rs  lib.rs  main.rs  models.rs  query.rs  response.rs  site_stats.rs  state.rs  templates.rs  util.rs
archive_frontend/src/handlers/: bbs.rs  charts.rs  courses.rs  ghosts.rs  mod.rs  player_tables.rs  players.rs  tables.rs
archive_frontend/templates/: _base.html.jinja  _clear_bar_row.html.jinja  bbs.html.jinja  chart.html.jinja  charts.html.jinja  course.html.jinja  courses.html.jinja  error.html.jinja  index.html.jinja  player.html.jinja  player_table.html.jinja  player_table_level.html.jinja  players.html.jinja  table.html.jinja  table_level.html.jinja  tables.html.jinja
archive_frontend_tablegen/: Cargo.toml  README.md
archive_frontend_tablegen/src/: main.rs
archive_parser/: Cargo.toml  README.md
archive_parser/migrations/: 0001_schema.sql
archive_parser/src/: cheaters.rs  db.rs  lib.rs  lr2crs.rs  main.rs  time.rs
archive_parser/src/parsers/: course.rs  mod.rs  searchcgi.rs  user.rs
archive_parser/tests/: course_hash_import.rs  playerxml_import.rs  smoke.rs
