[workspace]
members = ["archive_frontend", "archive_frontend_tablegen", "archive_parser"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "=1.52.3", features = ["full"] }
sqlx = { version = "=0.8.6", features = [
	"postgres",
	"runtime-tokio",
	"tls-rustls",
	"macros",
	"migrate",
	"chrono",
] }
anyhow = "=1.0.102"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
clap = { version = "=4.6.1", features = ["derive", "env"] }
dotenvy = "=0.15.7"
askama = "=0.12.1"
axum = "=0.8.9"
regex = "=1.12.3"
reqwest = { version = "=0.12.28", default-features = false }
serde = "=1.0.228"
serde_json = "=1.0.150"
url = "=2.5.8"
encoding_rs = "=0.8.35"
flate2 = "=1.1.9"
rayon = "=1.12.0"
scraper = "=0.21.0"
walkdir = "=2.5.0"
chrono = { version = "=0.4.44", features = ["std"] }
quick-xml = "=0.37.5"
